Dynamic experience calculation

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">Full-stack developer based out of Bangalore</p>
         <div class="about-me__body">
-            <p>Focused professional and passionate developer with 4.6+ years of full stack development
+            <p>Focused professional and passionate developer with <span id="experience" style="font-weight:bold;"></span> years of full stack development
                 and a proven knowledge of application development and troubleshooting. Aiming to leverage
                 my skills to successfully fill the developer role at your organization.
             </p>
@@ -226,6 +226,7 @@
             </li>
         </ul>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="js/index.js"  ></script>
 </body>
 </html>
