--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="resources/Nithesh_Resume.pdf" class="nav__link">My Resume</a></li>
                 <li class="nav__item"><a href="#education" class="nav__link">My Education</a></li>
 
             </ul>
@@ -206,6 +207,8 @@
     </section> -->
     <footer class="footer">
         <a href="mailto:nitheshtermin@gmail.com" class="footer__link">nitheshtermin@gmail.com</a>
+        <br>
+        <a href="resources/Nithesh_Resume.pdf" class="footer__link" target="_blank">My Resume</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link"
