Updated job details

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         <p class="section__subtitle section__subtitle--about">Full-stack developer based out of Bangalore</p>
         <div class="about-me__body">
             <p>Focused professional and passionate developer with <span id="experience" style="font-weight:bold;"></span> years of full stack development
-                and a proven knowledge of application development and troubleshooting. Aiming to leverage
-                my skills to successfully fill the developer role at your organization.
+                and a proven knowledge of application development and troubleshooting.
             </p>
         </div>
         <img class="about-me__img" src="img/Nithesh_Skills_small.jpg" alt="">
@@ -132,7 +131,7 @@
             </div>
         </div>
         <div class="portfolio">
-            <div class="tenure">Jan 2020 - Present</div>
+            <div class="tenure">Jan 2020 - Dec 2022</div>
             <div class="experience">
                 <h3 class="designation">Software Developer</h2>
                 <h3 class="company">Siemens Healthineers, Bengalore, Karnataka</h1>
@@ -172,6 +171,26 @@
                         <li>
                             <h4>Write maintainable code with >95% code coverage.</h4>
                         </li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+        <div class="portfolio">
+            <div class="tenure">Dec 2022 - Present</div>
+            <div class="experience">
+                <h3 class="designation">Software Developer 2</h2>
+                <h3 class="company">Microsoft, Hyderabad, Telangana</h1>
+                <div class="tasks">
+                    <ul>
+                        <li>
+                            <h4>Data Engineering on Azure.
+                            </h4>
+                        </li>
+                        <li>
+                            <h4>Developed Access Management tool for provisioning access to Azure resoureces.
+                            </h4>
+                        </li>                        
                     </ul>
                 </div>
                 
